fix incorrect grid gap size

--- a/src/layouts/_lo-grid.scss
+++ b/src/layouts/_lo-grid.scss
@@ -81,7 +81,7 @@
   &.-gap-8px   { grid-gap: 8px; }
   &.-gap-12px  { grid-gap: 8px; }
   &.-gap-16px  { grid-gap: 16px; }
-  &.-gap-24px  { grid-gap: 16px; }
+  &.-gap-24px  { grid-gap: 24px; }
   &.-gap-32px  { grid-gap: 32px; }
   &.-gap-64px  { grid-gap: 64px; }
 
